Revision history for Algorithm-QuineMcCluskey

0.01	2006-06-24T21:32-0500
		First version, released on an unsuspecting world. Supports
		single-output problems only.
